[package]
name = "mineping"
version = "1.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
anyhow = "1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-resolver = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"